--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       }
       .curiosidades {
         padding: 20px;
-        background-color: rgba(255,255,255,0.85);
+        background-color: rgba(69,73,156,0.85);
         margin: 20px;
         border-radius: 12px;
       }
@@ -64,7 +64,7 @@
     </div>
 
     <div class="viewer-container">
-      <model-viewer src="caixa.glb" alt="Multipack" auto-rotate camera-controls background-color="#fff"></model-viewer>
+      <model-viewer src="caixa2.glb" alt="Multipack" auto-rotate camera-controls background-color="#fff"></model-viewer>
     </div>
 
     
