--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         font-family: 'Arial', sans-serif;
         background-color: #fdf4f6;
         text-align: center;
-        color: #14328c;
-        background-image: url('fundo.png');
+        color: #ffffff;
+        background-image: url('bg.png');
         background-size: cover;
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-position: center;
       }
       header {
