--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="viewer-container">
-      <model-viewer src="caixa2.glb" alt="Multipack" auto-rotate camera-controls background-color="#fff"></model-viewer>
+      <model-viewer src="pck_frutas.glb" alt="Multipack" auto-rotate camera-controls background-color="#fff"></model-viewer>
     </div>
 
     
