--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             margin-bottom: 15px; /* Espaço entre os botões e o viewer */
         }
         .botoes-opcoes-container button {
-            background-color: #f7a6b6; /* Cor rosa claro para os botões */
+            background-color: #ddcba5; /* Cor rosa claro para os botões */
             color: #4a235a; /* Cor do texto dos botões */
             border: none;
             padding: 10px 20px;
