--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .botoes-opcoes-container button:hover {
-            background-color: #e98a9c; /* Rosa um pouco mais escuro no hover */
+            background-color: #fac79c; /* Rosa um pouco mais escuro no hover */
         }
         .botoes-opcoes-container button.active {
-            background-color: #d28594; /* Rosa mais escuro para o botão ativo */
+            background-color: #fac79c; /* Rosa mais escuro para o botão ativo */
             color: white;
         }
 
