--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             color: #333; /* Cor do texto digitado */
         }
         .observacoes-container button {
-            background-color: #d28594; /* Cor do seu botão 'enviar' */
+            background-color: #fac79c; /* Cor do seu botão 'enviar' */
             color: white;
             border: none;
             padding: 12px 25px;
