--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             margin-bottom: 15px; /* Espaço entre os botões e o viewer */
         }
         .botoes-opcoes-container button {
-            background-color: #f7a6b6; /* Cor rosa claro para os botões */
+            background-color: #fac79c; /* Cor rosa claro para os botões */
             color: #4a235a; /* Cor do texto dos botões */
             border: none;
             padding: 10px 20px;
@@ -57,10 +57,10 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .botoes-opcoes-container button:hover {
-            background-color: #e98a9c; /* Rosa um pouco mais escuro no hover */
+            background-color: #ddcba5; /* Rosa um pouco mais escuro no hover */
         }
         .botoes-opcoes-container button.active {
-            background-color: #d28594; /* Rosa mais escuro para o botão ativo */
+            background-color: #ddcba5; /* Rosa mais escuro para o botão ativo */
             color: white;
         }
 
@@ -118,7 +118,7 @@
             transition: background-color 0.3s ease;
         }
         .observacoes-container button[type="submit"]:hover {
-            background-color: #b76a7a;
+            background-color: #ddcba5;
         }
     </style>
 </head>
@@ -166,8 +166,8 @@
             // --- Gerenciamento de Opções dos Modelos ---
             const models = {
                 'opcao1Btn': 'pck_frutas.glb',
-                'opcao2Btn': 'pck_limao.glb', // Exemplo: um modelo de picolé de limão
-                'opcao3Btn': 'pck_uva.glb'   // Exemplo: um modelo de picolé de uva
+                'opcao2Btn': 'pck_frutas2.glb', // Exemplo: um modelo de picolé de limão
+                'opcao3Btn': 'pck_frutas3.glb'   // Exemplo: um modelo de picolé de uva
             };
 
             function setActiveOption(buttonId) {
