--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             margin-bottom: 15px;
         }
         .botoes-opcoes-container button {
-            background-color: #f7a6b6;
+            background-color: #fac79c;
             color: #4a235a;
             border: none;
             padding: 10px 20px;
@@ -57,10 +57,10 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .botoes-opcoes-container button:hover {
-            background-color: #e98a9c;
+            background-color: #cca283;
         }
         .botoes-opcoes-container button.active {
-            background-color: #d28594;
+            background-color: #cca283;
             color: white;
         }
 
@@ -118,7 +118,7 @@
             transition: background-color 0.3s ease;
         }
         .observacoes-container button[type="submit"]:hover {
-            background-color: #b76a7a;
+            background-color: #fac79c;
         }
         /* Mensagem de status para o formulário */
         .form-status-message {
