--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
             
             const models = {
                 'opcao1Btn': 'pck_frutas.glb',
-                'opcao2Btn': 'pck_limao.glb',
-                'opcao3Btn': 'pck_uva.glb'
+                'opcao2Btn': 'pck_frutas2.glb',
+                'opcao3Btn': 'pck_frutas3.glb'
             };
 
             function setActiveOption(buttonId) {
