--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             color: #333;
         }
         .observacoes-container button[type="submit"] {
-            background-color: #d28594;
+            background-color: #fac79c;
             color: white;
             border: none;
             padding: 12px 25px;
@@ -118,7 +118,7 @@
             transition: background-color 0.3s ease;
         }
         .observacoes-container button[type="submit"]:hover {
-            background-color: #fac79c;
+            background-color: #cca283;
         }
         /* Mensagem de status para o formulário */
         .form-status-message {
@@ -157,7 +157,7 @@
     <div class="observacoes-container">
         <h2>Deixe suas considerações</h2>
         <form id="observacoesForm"> 
-            <textarea id="campoObservacoes" name="observacao" rows="6" placeholder="Escreva suas observações aqui..." required></textarea>
+            <textarea id="campoObservacoes" name="observacao" rows="6" placeholder="Escreva seu nome e suas observações" required></textarea>
             
             <input type="hidden" name="modelo_nome" id="modeloNomeHidden">
             <input type="hidden" name="opcao_selecionada" id="opcaoSelecionadaHidden">
